# genshin_relics

./: CMakeLists.txt  README.md  charset_convert.cpp  charset_convert.h  genshin_relics.cpp  genshin_relics.h  genshin_relics.ini  genshin_relics.qrc  genshin_relics.ui  genshin_relics.vcxproj  genshin_relics.vcxproj.filters  genshin_relics_en.qm  genshin_relics_en.ts  genshin_relics_zh.ts  logo.rc  main.cpp  元素爆发率和元素反应率.txt  圣遗物属性截图识别.txt  圣遗物收益分析.txt  圣遗物收益分析2.txt  圣遗物特调说明.txt
msvc/: genshin_relics.sln
